# neo-mmlgcn

./: .gitignore  README.md  config.toml  graph.ipynb  grid_search.py  main.py  mmlgcn.py  pyproject.toml  run_grid_search.nu  utils.py
data/: pretrain_preprocess.py
data/dbbook/: s_pre_adj_mat.npz  test.txt  train.txt  validation.txt
data/ml1m/: process.py  s_pre_adj_mat.npz  test.txt  train.txt  validation.txt
data/ml1m/audio/: items.npy
data/tiktok/: s_pre_adj_mat.npz  test.txt  train.txt
data/tiktok/tmp/: test.txt  train.txt
src/: aux_graph.ipynb  config.toml  graph.ipynb  grid_search.py  main.py  mmlgcn.py  nohup.out  utils.py
